# Orbis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: CMakeLists.txt
include/: log.hpp  version.hpp  version.hpp.in
include/orbis/: compilers.hpp  image.hpp
resources/: compile_resource.sh
src/: CMakeLists.txt  log.cpp
tools/: CMakeLists.txt  fonts.hpp  gl.cpp  gl.hpp  gui.cpp  gui.hpp  main.cpp
